Add: Left side Bar types , styles and components

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import '../styles/components/components.css';
+
 * {
   margin: 0;
   padding: 0;
@@ -360,7 +362,7 @@
   }
 
   /* Sidebar */
-  .sidebar {
+  /* .sidebar {
     @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
   }
 
@@ -374,5 +376,5 @@
 
   .sidebar-label {
     @apply text-16 font-semibold text-black-2 max-xl:hidden;
-  }
+  } */
 }
