--- a/app/globals.css
+++ b/app/globals.css
@@ -250,13 +250,13 @@
   }
 
   /* Mobile nav */
-  .mobilenav-sheet {
+  /* .mobilenav-sheet {
     @apply flex h-[calc(100vh-72px)] flex-col justify-between overflow-y-auto;
   }
 
   .mobilenav-sheet_close {
     @apply flex gap-3 items-center p-4 rounded-lg w-full max-w-60;
-  }
+  } */
 
   /* PlaidLink */
   .plaidlink-primary {
